--- a/admin/i18n/es/translations.json
+++ b/admin/i18n/es/translations.json
@@ -2,8 +2,11 @@
     "(leave empty for Autodiscovery)": "(déjelo vacío para el descubrimiento automático)",
     "(select for VIS compatibility)": "Compruebe esto para la compatibilidad con VIS",
     "AVR EISCP Port": "Puerto AVR EISCP",
+    "Device alive check interval (ms)": "Intervalo de verificación de dispositivo activo (ms)",
+    "Device discovery interval (ms)": "Intervalo de descubrimiento de dispositivos (ms)",
     "Max Volume Zone1": "Volumen máximo de zone1",
     "Max Volume Zone2": "Volumen máximo de zone2",
     "ONKYO adapter settings": "Configuración del adaptador ONKYO",
-    "Onkyo AVR Address": "Dirección de Onkyo AVR"
+    "Onkyo AVR Address": "Dirección de Onkyo AVR",
+    "on save adapter restarts with new config immediately": "¡Al guardar, el adaptador se reinicia con una nueva configuración inmediatamente!"
 }
