--- a/admin/i18n/fr/translations.json
+++ b/admin/i18n/fr/translations.json
@@ -2,8 +2,11 @@
     "(leave empty for Autodiscovery)": "(laisser vide pour la découverte automatique)",
     "(select for VIS compatibility)": "Vérifiez ceci pour la compatibilité VIS",
     "AVR EISCP Port": "Port EISCP de l'AVR",
+    "Device alive check interval (ms)": "Intervalle de vérification de l'appareil en vie (ms)",
+    "Device discovery interval (ms)": "Intervalle de découverte de l'appareil (ms)",
     "Max Volume Zone1": "Volume max de la zone1",
     "Max Volume Zone2": "Volume max de la zone2",
     "ONKYO adapter settings": "Paramètres de l'adaptateur ONKYO",
-    "Onkyo AVR Address": "Adresse AVR Onkyo"
+    "Onkyo AVR Address": "Adresse AVR Onkyo",
+    "on save adapter restarts with new config immediately": "Lors de la sauvegarde, l'adaptateur redémarre immédiatement avec une nouvelle configuration !"
 }
